# c-boy

./: .gitignore  CMakeLists.txt  main.cpp
arch/: cpu.cpp  cpu.h  emu.cpp  emu.h  gpu.cpp  gpu.h  joy.cpp  joy.h  mmu.cpp  mmu.h  ops.cpp  ops.h
arch/mbc/: mbc.cpp  mbc.h  mbc1.cpp  mbc1.h  mbc2.cpp  mbc2.h  mbc3.cpp  mbc3.h  nombc.cpp  nombc.h
data/: splashscreen.cpp  splashscreen.h
imgui/: imgui-events-SFML.h
windows/: filedialog.cpp  filedialog.h  settings.cpp  settings.h
